@@ -644,11 +644,37 @@ literal|"\""
 argument_list|)
 expr_stmt|;
 block|}
+name|String
+name|version
+init|=
+literal|"2.0"
+decl_stmt|;
+if|if
+condition|(
+name|md
+operator|.
+name|getInheritedDescriptors
+argument_list|()
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|version
+operator|=
+literal|"2.2"
+expr_stmt|;
+block|}
 name|out
 operator|.
 name|println
 argument_list|(
-literal|"<ivy-module version=\"1.0\""
+literal|"<ivy-module version=\""
+operator|+
+name|version
+operator|+
+literal|"\""
 operator|+
 name|xmlNamespace
 operator|+
