@@ -17,7 +17,7 @@
    specific language governing permissions and limitations
    under the License.    
 -->
-<ivy-module version="1.0">
+<ivy-module version="2.0">
 	<info organisation="myorg"
 		module="mymodule"
 		revision="1.0"
